<resources>
    <!-- Títols de les activitats -->
    <string name="app_name">TimeTracker</string>
    <string name="add_task_title">Afegir tasca</string>
    <string name="add_project_title">Afegir projecte</string>
    <string name="edit_project_title">Edita el projecte</string>
    <string name="edit_task_title">Edita la tasca</string>
    <string name="new_report_title">Nou informe</string>

    <!-- 1st activity & menus -->
    <string name="first_task">Si us plau, afegeix una primera tasca</string>
    <string name="report_action">Informes</string>
    <string name="info_action">Informació</string>
    <string name="delete_action">Esborrar</string>
    <string name="edit_action">Editar</string>
    <!-- Projects and tasks -->
    <string name="title">Títol</string>
    <string name="description">Descripció</string>
    <string name="my_task">La meva tasca</string>
    <string name="my_task_description">Descripció de la meva tasca</string>
    <string name="my_project">El meu projecte</string>
    <string name="my_project_description">Descripció del meu projecte</string>
    <string name="ok_button">D\'acord</string>

    <!-- Report -->
    <string name="period">Període</string>
    <string name="tasca_programada">Tasca Programada</string>
    <string name="temps_limit">Temps Limit</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="fi">Fi:</string>
    <string name="inici">Inici:</string>
    <string name="format">Format</string>
    <string name="tipus">Tipus</string>
    <string name="des_de">Des de:</string>
    <string name="fins_a">Fins a:</string>
    <string name="dd_mm_yyyy_hh_mm_ss">dd/mm/yyyy hh:mm:ss</string>
    <string name="no_time">--:--</string>
    <string name="no_date">--/--/--</string>
    <string name="file">file</string>
    <string-array name="periods">
        <item>Setmana passada</item>
        <item>Mes passat</item>
        <item>Any passat</item>
        <item>Personalitzat</item>
    </string-array>
    <string-array name="info_long">
        <item>Breu</item>
        <item>Detallat</item>
    </string-array>
    <string-array name="info_types">
        <item>Text</item>
        <item>HTML</item>
        <item>XML</item>
        <item>PDF</item>
        <item>RTF</item>
    </string-array>



</resources>
