<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joans.timetracker.AfegirTascaActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:layout_alignStart="@+id/titol" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/my_task_description"
        android:ems="10"
        android:textSize="20sp"
        android:id="@+id/descripcio"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textColorLink="@android:color/holo_orange_light"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginStart="36dp"
        android:layout_below="@+id/titol"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/my_task"
        android:ems="10"
        android:id="@+id/titol"
        android:textSize="20sp"
        android:textColorLink="@color/colorAccent"
        tools:ignore="LabelFor"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:text="@string/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskOK"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView4" />


    <Button
        android:text="@string/no_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/limitTime"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/tempsCheck"
        android:layout_toEndOf="@+id/tempsCheck" />

    <TextView
        android:text="@string/inici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:text="@string/no_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/progCheck"
        android:layout_alignStart="@+id/limitTime" />

    <Button
        android:text="@string/no_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <TextView
        android:text="@string/fi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        tools:ignore="UnknownId"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignStart="@+id/textView2" />

    <CheckBox
        android:text="@string/tasca_programada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progCheck"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/limitTime"
        android:layout_alignStart="@+id/tempsCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempsCheck"
        android:text="@string/temps_limit"
        android:layout_marginTop="19dp"
        android:checked="false"
        android:layout_below="@+id/descripcio"
        android:layout_alignStart="@+id/descripcio" />


</RelativeLayout>
