<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:weightSum="1"
    android:orientation="vertical">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/period"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ok_button"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />

    <TextView
        android:text="@string/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/no_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/period"
        android:layout_alignParentEnd="true"
        android:id="@+id/button5"
        android:onClick="showDatePickerDialog" />

    <Button
        android:text="@string/no_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/period"
        android:layout_alignStart="@+id/button"
        android:onClick="showTimePickerDialog" />

    <Button
        android:text="@string/no_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:id="@+id/button7"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:text="@string/des_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginStart="13dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fins_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:text="@string/tipus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/button6"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipus"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/format"
        android:layout_below="@+id/tipus"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/format"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/no_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="showTimePickerDialog" />

</RelativeLayout>