<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_task"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joans.timetracker.EditarTascaActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/textView3"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/titol" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/titol"
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView4"
        android:textColorLink="@color/colorAccent"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/titol"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="23dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:textSize="20sp"
        android:id="@+id/descripcio"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textColorLink="@android:color/holo_orange_light"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskOK"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="120dp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>
